finish base on PC

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -405,6 +405,9 @@ placeholder {
               width: 35px;
             }
           }
+          &.active {
+            color: $color_3;
+          }
         }
       }
     }
@@ -694,7 +697,7 @@ placeholder {
     box-sizing: border-box;
   }
   .overlay_image.hero {
-    background-image: url(../img/hero/2.jpg);
+    background-image: url(~/assets/img/hero/2.jpg);
   }
   .overlay_color.hero {
     background-color: $background-color_4;
@@ -703,7 +706,7 @@ placeholder {
     height: 100vh;
   }
   .overlay_image.testimonial {
-    background-image: url(../img/hero/3.jpg);
+    background-image: url(~/assets/img/hero/3.jpg);
   }
   .overlay_color.testimonial {
     background-color: $background-color_4;
@@ -2226,7 +2229,7 @@ placeholder {
 .arlo_tm_universal_box_wrap.particle {
   height: 100vh;
   position: relative;
-  background-image: url(../img/hero/2.jpg);
+  background-image: url(..~/assets/img/hero/2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -2245,7 +2248,7 @@ placeholder {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url(../img/hero/2.jpg);
+  background-image: url(..~/assets/img/hero/2.jpg);
   position: relative;
   .overlay {
     position: absolute;
@@ -2297,7 +2300,7 @@ placeholder {
       z-index: 20;
     }
     .overlay_image.top {
-      background-image: url(../img/hero/2.jpg);
+      background-image: url(..~/assets/img/hero/2.jpg);
     }
     .overlay_color.top {
       background-color: $background-color_11;
