--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -773,6 +773,7 @@ placeholder {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
+      cursor: pointer;
       &.about-mobile {
         width: 0;
       }
@@ -1372,6 +1373,14 @@ placeholder {
             font-weight: 600;
             color: $color_7;
             line-height: 1;
+          }
+        }
+        .text {
+          p {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
           }
         }
       }
