--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -180,6 +180,7 @@ body {
   letter-spacing: 0.5px;
   word-wrap: break-word;
   font-weight: 400;
+  width: 100% !important;
 }
 svg {
   fill: currentcolor;
