--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2879,8 +2879,8 @@ placeholder {
       display: none;
     }
     .rightbox {
-      padding-left: 0px;
-      width: 100%;
+      padding-left: 0px !important;
+      width: 100% !important;
     }
   }
   .arlo_tm_contact_wrap_all {
