--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -227,6 +227,9 @@ img.svg {
     padding: 12px 8px 0;
     height: auto;
   }
+  &.skill-pc {
+    padding-top: 0;
+  }
 }
 .arlo_tm_content {
   width: 100%;
@@ -1101,7 +1104,7 @@ placeholder {
   background-color: $background-color_5;
   padding: 36px 0px;
   &.arlo_tm_skills_wrap:first-child {
-    padding-top: 100px;
+    padding-top: 60px;
     &.skill-mobile {
       padding-top: 24px;
       margin-top: 67px;
