add my Cv and edit About component

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1384,6 +1384,7 @@ placeholder {
             font-weight: 600;
             color: $color_7;
             line-height: 1;
+            min-width: 44px;
           }
         }
         .text {
