--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1336,6 +1336,8 @@ placeholder {
     ul {
       margin: 0px 0px 0px -30px;
       list-style-type: none;
+      display: flex;
+      flex-wrap: wrap;
       li {
         margin: 0px 0px 30px 0px;
         float: left;
@@ -1385,10 +1387,12 @@ placeholder {
             color: $color_7;
             line-height: 1;
             min-width: 44px;
+            min-height: 48px;
           }
         }
         .text {
           p {
+            min-height: 50px;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
@@ -2093,7 +2097,7 @@ placeholder {
             font-size: 16px;
             color: $color_5;
             display: inline-block;
-            width: 108px;
+            width: 98px;
           }
           span {
             padding-left: 5px;
